--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ header {
 }
 
 button {
-  cursor: pointer ;
+  cursor: pointer;
   background-color: #000000e5;
   box-shadow: .1rem .1rem .1rem #c5353569;
   border: transparent;
@@ -85,7 +85,7 @@ i {
 }
 
 #edit-form {
-  display: flex;
+  display:none;
   flex-direction: column;
   gap: .3rem;
   border:.1rem solid #ffffff77;
@@ -98,7 +98,7 @@ i {
 
 .toolbar {
   display: flex;
-  gap: 2rem;
+  gap: 1.3rem;
   border:.1rem solid #ffffff77;
   border-radius: .5rem;
   margin-bottom: .7rem;
@@ -110,7 +110,7 @@ i {
   display: flex;
   flex-direction: column;
   gap: .3rem;
-  width: 80%;
+  width: 70%;
 }
 #search form {
   display: flex;
@@ -123,7 +123,7 @@ i {
   justify-content: center;
   flex-direction: column;
   gap: .3rem;
-  width: 20%;
+  width: 30%;
 }
 
 #filter-select {
@@ -142,14 +142,26 @@ i {
   flex-direction: column;
   align-items: center;
   gap: .3rem;
+  box-shadow: .2rem .2rem .5rem #250808;
 }
 .todo{
+  width: 100%;
   text-shadow: .1rem .1rem .1rem #250808;
   border:.1rem solid #ffffff77;
   padding: .7rem 1rem;
   border-radius: .5rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   gap: .5rem;
+}
+.text-todo {
+  max-width: 22rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.done {
+  background-color: #fffbfb;
 }
